frontend/tests/cases/positive/replicate.gr
import Vec

main : Vec 2 Int
main = replicate (S (S Z)) [5]
